--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,21 @@
+<style type="text/css" media="screen">
+	#home-logo {
+        background: url('assets/images/pb-home-logo.png') no-repeat center;
+        background-size: 190px 50px;
+        height: 50px;
+	}
+    
+    @media (-webkit-min-device-pixel-ratio: 2) {
+        #home-logo {
+            background: url('assets/images/pb-home-logo-@2x.png') no-repeat center;
+            background-size: 190px 50px;
+            height: 50px;
+        }
+	}
+</style>
+
 <header class="bar-title">
-  <h1 class="title"><img src="assets/images/peddlebuddy-logo.png" /></h1>
+  <h1 class="title" id="home-logo"></h1>
 </header>
 
 <div class="content">
