--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -1,6 +1,6 @@
-<div class="content content-padded" style="background: url('assets/images/pb-welcome.png') no-repeat;">
+<div class="content content-padded" id="welcome-page">
     <br/>
-    <div style="background: url('assets/images/peddlebuddy-logo-back.png') no-repeat center; height:65px;">&nbsp;</div>
+    <div id="welcome-logo"></div>
     <div class="center">
 		<h3 style="color:#E1FEEE;">We sell your pre-loved apparel for you!</h3>
 	</div>
