Added retina support for splash screen and home page logo.

--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -2,7 +2,7 @@
     <br/>
     <div id="welcome-logo"></div>
     <div class="center">
-		<h3 style="color:#E1FEEE;">We sell your pre-loved apparel for you!</h3>
+		<h3 style="color:#E1FEEE;">You have better things to do...<br/>We sell your stuff for you!</h3>
 	</div>
     
 	<br/><br/><br/><br/>
