Added angular-mobile service for page transitions. Added validations for signup and login.

--- a/partials/account_settings.html
+++ b/partials/account_settings.html
@@ -1,5 +1,5 @@
-<header class="bar-title">
-	<a class="button-prev" href="#/">
+<header class="bar-title" ng-controller="WelcomeController">
+    <a class="button" ng-click="back()">
     	Home
   	</a>
   	<h1 class="title">Account</h1>
