--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,11 @@ select {
 .list.prod li { text-align: center; padding: 20px 20px 20px 10px; }
 .list.prod li > a:not([class*="button"]) { margin: -20px -20px -20px -10px; }
 
+/*
 .content, .bar-standard {
 	padding-bottom: 60px;
 }
+*/
 
 /* Push buttons 100% */
 .btn {
@@ -119,4 +121,26 @@ select {
 .bar-title .button-prev:active:before,
 .bar-title .button-next:active:before {
   background-color: #56D0B9;
+}
+ 
+.welcome-btns {
+    margin-top: 75px;
+}
+
+.get-started {
+    color: #ffffff;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
+    background-color: #3E88BF;
+    background-image: -webkit-linear-gradient(top, #489EDD 0, #3E88BF 100%);
+    background-image: linear-gradient(to bottom, #489EDD 0, #3E88BF 100%);
+    border: 1px solid #3E88BF;
+    border-radius: 3px;
+    box-shadow: inset 0 1px 1px rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .025);
+}
+
+.get-started:active {
+    color: #ffffff;
+    background-color: #3E88BF;
+    background-image: none;
+    box-shadow: inset 0 0 0 rgba(255, 255, 255, .2), 0 0 0 rgba(0, 0, 0, .025);
 }
