--- a/partials/listing.html
+++ b/partials/listing.html
@@ -1,19 +1,15 @@
-<header class="bar-title">
-  	<a class="button-prev" href="#/listings">
+<header class="bar-title" ng-controller="WelcomeController">
+  	<a class="button-prev" ng-click="back()">
     	Back
   	</a>
   	<h1 class="title">PeddleBuddy</h1>
 </header>
 
 <div class="content content-padded">
-	<div ng-init="getListing()">
-		<div ng-if="showLoadingWidget()" class="center"><img ng-src="{{ spinningWheelPath }}" /><br/>Loading...</div>
-		
-		<div ng-if="!showLoadingWidget()">
-			<h3>{{ listing.get('sellerDescription') }} {{ listing.get('sellerPrice') | currency }}</h3>
-			<img ng-src="{{ listing.get('photos')[0].get('photo').url() }}" width="250px" /><br />
-			<br />
-			<a class="button-negative button-block" confirm-action="Are you sure you want to cancel this sale?">Cancel sale</a>
-		</div>
+	<div ng-init="getListing()">		
+        <h3>{{ listing.get('sellerDescription') }} {{ listing.get('sellerPrice') | currency }}</h3>
+        <img ng-src="{{ listing.get('photos')[0].get('photo').url() }}" width="250px" /><br />
+        <br />
+        <a class="button-negative button-block" confirm-action="Are you sure you want to cancel this sale?">Cancel sale</a>
 	</div>
 </div>
