--- a/partials/login.html
+++ b/partials/login.html
@@ -1,19 +1,19 @@
-<header class="bar-title">
-    <a class="button" href="#/welcome">
-    	Cancel
+<header class="bar-title" ng-controller="WelcomeController">
+    <a class="button" ng-click="back()">
+    	Back
   	</a>
   	<h1 class="title">Sign In</h1>
 </header>
 
 <div class="content content-padded">
     <br/>
-	<form ng-submit="login()" name="loginForm">
-		<input type="email" name="email" ng-model="credentials.username" placeholder="Email" required />
-		<input type="password" name="password" ng-model="credentials.password" placeholder="Password" required />
+	<form name="loginForm">
+		<input type="email" name="email" ng-model="credentials.username" placeholder="Email" required/>
+		<input type="password" name="password" ng-model="credentials.password" placeholder="Password" />
 		
 		<br /><br />		
-		<button type="submit" class="btn button button-block" ng-disabled="loginForm.$invalid">Sign In</button>
+		<a ng-click="login()" class="btn button button-block">Sign In</a>
 	</form>
 	<br />
-    <p class="center"><a href="#/reset_password">Forgot your password?</a></p>
+    <p class="center" ng-controller="WelcomeController"><a ng-click="slidePage('reset_password', 'modal')">Forgot your password?</a></p>
 </div>
