--- a/partials/reset_password.html
+++ b/partials/reset_password.html
@@ -1,8 +1,8 @@
-<header class="bar-title">
-	<a class="button" href="#/login">
-    	Cancel
+<header class="bar-title" ng-controller="WelcomeController">
+	<a class="button" ng-click="back()">
+    	Close
   	</a>
-  	<h1 class="title">Forgot Password</h1>
+  	<h1 class="title">Reset Password</h1>
 </header>
 
 <div class="content content-padded">
@@ -10,8 +10,8 @@
     <p style="color:#999;" class="center">Enter your email and we will send you password reset instructions.
     <br/><br/>
 	<form ng-submit="resetPassword()" name="passwordResetForm">
-		<input type="email" name="email" ng-model="userEmail" placeholder="Email" required />
+		<input type="email" name="email" ng-model="userEmail" placeholder="Email" required/>
         <br /><br />
-        <button type="submit" class="btn button button-block" ng-disabled="passwordResetForm.$invalid;">Reset Password</button>
+        <a ng-click="resetPassword()" class="btn button button-block">Reset Password</a>
     </form>
 </div>
