Added NavigationController for handeling page transitions over WelcomeController.

--- a/partials/home.html
+++ b/partials/home.html
@@ -3,7 +3,7 @@
 </header>
 
 <div class="content">
-    <div class="content-padded" ng-controller="WelcomeController">
+    <div class="content-padded" ng-controller="NavigationController">
         <br />
         <a ng-click="slidePage('/sell', 'modal')" class="button-block" style="padding:35px 0;">
             Sell an item
@@ -12,7 +12,7 @@
   
     <br/><br/>
   
-  <ul class="list inset home-list" style="font-weight:bold;" ng-controller="WelcomeController">
+  <ul class="list inset home-list" style="font-weight:bold;" ng-controller="NavigationController">
     <li>
       <a ng-click="slidePage('/listings', 'slide')">
         Selling
