--- a/partials/listing.html
+++ b/partials/listing.html
@@ -1,4 +1,4 @@
-<header class="bar-title" ng-controller="WelcomeController">
+<header class="bar-title" ng-controller="NavigationController">
   	<a class="button-prev" ng-click="back()">
     	Back
   	</a>
