--- a/partials/login.html
+++ b/partials/login.html
@@ -1,4 +1,4 @@
-<header class="bar-title" ng-controller="WelcomeController">
+<header class="bar-title" ng-controller="NavigationController">
     <a class="button" ng-click="back()">
     	Back
   	</a>
@@ -15,5 +15,5 @@
 		<a ng-click="login()" class="btn button button-block">Sign In</a>
 	</form>
 	<br />
-    <p class="center" ng-controller="WelcomeController"><a ng-click="slidePage('reset_password', 'modal')">Forgot your password?</a></p>
+    <p class="center" ng-controller="NavigationController"><a ng-click="slidePage('reset_password', 'modal')">Forgot your password?</a></p>
 </div>
