--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -5,7 +5,7 @@
 		<h3 style="color:#E1FEEE;">You have better things to do...<br/>We sell your stuff for you!</h3>
 	</div>
     
-    <div class="welcome-btns">
+    <div class="welcome-btns" ng-controller="NavigationController">
         <a ng-click="slidePage('/signup','slide')" class="btn button button-block get-started">
             Get Started
         </a>
