--- a/partials/home.html
+++ b/partials/home.html
@@ -29,7 +29,7 @@
 
   <br/><br/>
 
-  <ul class="list inset home-list" style="font-weight:bold;">
+  <ul class="list inset home-list" style="font-weight:bold;" ng-controller="LoginController">
     <li>
       Logout:
       <a class="button" ng-click="logout()">
