--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -2,7 +2,7 @@
     <br/>
     <div id="welcome-logo"></div>
     <div class="center">
-		<h3 style="color:#E1FEEE;">You have better things to do...<br/>We sell your stuff for you!</h3>
+		<h3 style="color:#E1FEEE;">You have better things to do...<br/>We sell your fashions for you!</h3>
 	</div>
     
     <div class="welcome-btns" ng-controller="NavigationController">
