Updated Widget service to LoadingWidget. Turned form submit buttons from a links into buttons - This allows for the iOS 'GO'button to be clickable.

--- a/partials/login.html
+++ b/partials/login.html
@@ -12,7 +12,7 @@
 		<input type="password" name="password" ng-model="credentials.password" placeholder="Password" />
 		
 		<br /><br />		
-		<a ng-click="login()" class="btn button button-block">Sign In</a>
+		<button type="submit" ng-click="login()" class="btn button button-block">Sign In</button>
 	</form>
 	<br />
     <p class="center" ng-controller="NavigationController"><a ng-click="slidePage('reset_password', 'modal')">Forgot your password?</a></p>
