--- a/partials/signup.html
+++ b/partials/signup.html
@@ -12,6 +12,6 @@
 		<input type="password" name="password" ng-model="newUser.password" placeholder="Password (at least 6 characters)" ng-minlength="6" required/>
 		<input type="text" name="telephone" ng-model="newUser.telephone" placeholder="555-555-5555" required/>
 		<br /><br />		
-		<a type="submit" ng-click="signUp()" class="btn button button-block">Get Started</a>
+		<button type="submit" ng-click="signUp()" class="btn button button-block">Get Started</button>
 	</form>
 </div>
