Added Spinner service to handle loading forms with spin.js to display spinner. Dropped the Notification service in favor of placing the messages within the Parse service.

--- a/partials/reset_password.html
+++ b/partials/reset_password.html
@@ -1,9 +1,12 @@
 <header class="bar-title" ng-controller="NavigationController">
 	<a class="button" ng-click="back()">
-    	Close
+    	Back
   	</a>
   	<h1 class="title">Reset Password</h1>
 </header>
+
+<div id="overlay" ng-show="spinning"></div>
+<div id="overlaySpinner" ng-show="spinning" ng-controller="SpinnerController" us-spinner="opts"></div>
 
 <div class="content content-padded">
 	<br/>
