--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,29 @@ select {
 	-webkit-appearance: ;
 }
  
+ #overlay {
+    opacity:0.35;
+    background-color:#000;
+    color: #fff;
+    width:100%;
+    height:100%;
+    z-index:10;
+    top:0;
+    left:0;
+    position:fixed;
+}
+
+ #overlaySpinner {
+    z-index:10;
+    width:100px;
+    height:100px;
+    position:fixed;
+    top:50%;
+    left:50%;
+    margin-top:-50px;
+    margin-left:-50px;
+}
+ 
 .list.prod li { text-align: center; padding: 20px 20px 20px 10px; }
 .list.prod li > a:not([class*="button"]) { margin: -20px -20px -20px -10px; }
 
