--- a/partials/login.html
+++ b/partials/login.html
@@ -5,6 +5,9 @@
   	<h1 class="title">Sign In</h1>
 </header>
 
+<div id="overlay" ng-show="spinning"></div>
+<div id="overlaySpinner" ng-show="spinning" ng-controller="SpinnerController" us-spinner="opts"></div>
+
 <div class="content content-padded">
     <br/>
 	<form name="loginForm">
@@ -15,5 +18,5 @@
 		<button type="submit" ng-click="login()" class="btn button button-block">Sign In</button>
 	</form>
 	<br />
-    <p class="center" ng-controller="NavigationController"><a ng-click="slidePage('reset_password', 'modal')">Forgot your password?</a></p>
+    <p class="center" ng-controller="NavigationController"><a ng-click="slidePage('reset_password', 'slide')">Forgot your password?</a></p>
 </div>
