Added ParseUser service to check if user is logged in for route redirecting. Added First draft of the new home screen with 4 button layout.

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ select {
 	text-align: center;
 }
 
+.navi a {
+    color: #929292;
+}
+
 .listing-badge {
     position: absolute;
 	color: #fff;
