Added PageController and page partials. Pages are used to hold more static type files such as FAQs, Privacy Policy, TOS, etc. Added angular-sanitize to sanitize HTML from pages.

--- a/partials/account_settings.html
+++ b/partials/account_settings.html
@@ -5,7 +5,8 @@
   	<h1 class="title">Account</h1>
 </header>
 
-<div class="content content-padded">
+<div class="content">
+    <div class="content-padded">
 	<ul class="segmented-controller">
 	  <li class="active">
 	    <a ng-href="#/account">Account</a>
@@ -29,4 +30,13 @@
 	  	</div>
 		<a class="button button-block">Save Changes</a>
 	</form>
+    </div>
+    
+    <ul class="list inset" style="font-weight:bold;" ng-controller="LoginController">
+        <li>
+            <a ng-click="logout()">
+                Sign Out
+            </a>
+        </li>
+    </ul>
 </div>
