--- a/partials/home.html
+++ b/partials/home.html
@@ -31,7 +31,7 @@
                 </a>
             </div>
             <div class="span6 center navi" ng-controller="LoginController">
-                <a href="" ng-click="logout()" style="padding:35px 0;">
+                <a ng-click="slidePage('/more', 'slide')" style="padding:35px 0;">
                     <img ng-src="assets/images/more.png" /><br/>More
                 </a>
             </div>
