--- a/partials/listing.html
+++ b/partials/listing.html
@@ -5,8 +5,11 @@
   	<h1 class="title">PeddleBuddy</h1>
 </header>
 
-<div class="content content-padded">
-	<div ng-init="getListing()">		
+<div id="overlay" ng-show="spinning"></div>
+<div id="overlaySpinner" ng-show="spinning" ng-controller="SpinnerController" us-spinner="opts"></div>
+
+<div class="content content-padded" ng-init="getListing()">
+	<div>
         <h3>{{ listing.get('sellerDescription') }} {{ listing.get('sellerPrice') | currency }}</h3>
         <img ng-src="{{ listing.get('photos')[0].get('photo').url() }}" width="250px" /><br />
         <br />
