--- a/partials/home.html
+++ b/partials/home.html
@@ -1,10 +1,10 @@
 <header class="bar-title">
-  <h1 class="title" id="home-logo"></h1>
+    <h1 class="title" id="home-logo"></h1>
 </header>
 
 <div class="content" style="background:#F5F5F5;">
-    <ul class="list center selling-form" style="font-weight:bold;font-size:18px;color:#444444;">
-        <li class="center" style="border-bottom: solid 1px #E6E6E6;">
+    <ul class="list center selling-form" style="font-weight:bold;font-size:18px;">
+        <li class="center" style="border-bottom: solid 1px #E6E6E6;color:#555555;">
             $300 | 30 listings | 5 sales
         </li>
     </ul>
