--- a/partials/listing.html
+++ b/partials/listing.html
@@ -1,5 +1,5 @@
 <header class="bar-title" ng-controller="NavigationController">
-  	<a class="button-prev" ng-click="back()">
+  	<a class="button" ng-click="back()">
     	Back
   	</a>
   	<h1 class="title">PeddleBuddy</h1>
