--- a/partials/more.html
+++ b/partials/more.html
@@ -1,11 +1,11 @@
 <header class="bar-title" ng-controller="NavigationController">
     <a class="button" ng-click="back()">
-    	Back
+    	Home
   	</a>
   	<h1 class="title">More</h1>
 </header>
 
-<div class="content">
+<div class="content" style="background:#F5F5F5;">
     <br/>
     <ul class="list inset" style="font-weight:bold;" ng-controller="NavigationController">
         <li>
