--- a/partials/account.html
+++ b/partials/account.html
@@ -5,7 +5,7 @@
   	<h1 class="title">Account</h1>
 </header>
 
-<div class="content" style="background:#F5F5F5;">
+<div class="content gray-background">
     <div class="content-padded">
         <h3>{{ user.get('firstName') }} {{ user.get('lastName') }}</h3>
     </div>
