--- a/partials/home.html
+++ b/partials/home.html
@@ -2,9 +2,9 @@
     <h1 class="title" id="home-logo"></h1>
 </header>
 
-<div class="content" style="background:#F5F5F5;">
+<div class="content gray-background">
     <ul class="list center selling-form" style="font-weight:bold;font-size:18px;">
-        <li class="center" style="border-bottom: solid 1px #E6E6E6;color:#555555;">
+        <li class="center" style="border-bottom: solid 1px #E6E6E6;color:#444444;">
             $300 | 30 listings | 5 sales
         </li>
     </ul>
