--- a/partials/reset_password.html
+++ b/partials/reset_password.html
@@ -3,18 +3,20 @@
     	Back
   	</a>
   	<h1 class="title">Reset Password</h1>
+    <a class="button" ng-click="resetPassword()">
+    	Reset
+  	</a>
 </header>
 
 <div id="overlay" ng-show="spinning"></div>
 <div id="overlaySpinner" ng-show="spinning" ng-controller="SpinnerController" us-spinner="opts"></div>
 
-<div class="content content-padded">
+<div class="content content-padded gray-background">
 	<br/>
     <p style="color:#999;" class="center">Enter your email and we will send you password reset instructions.
     <br/><br/>
 	<form ng-submit="resetPassword()" name="passwordResetForm">
 		<input type="email" name="email" ng-model="userEmail" placeholder="Email" required/>
-        <br /><br />
-        <a ng-click="resetPassword()" class="btn button button-block">Reset Password</a>
+        <input type="submit" value="Reset Password" style="visibility:hidden" />
     </form>
 </div>
