--- a/partials/user_agreement.html
+++ b/partials/user_agreement.html
@@ -2,13 +2,13 @@
     <a class="button" ng-click="back()">
     	Back
   	</a>
-  	<h1 class="title">Privacy</h1>
+  	<h1 class="title">User Agreement</h1>
 </header>
 
 <div id="overlay" ng-show="spinning"></div>
 <div id="overlaySpinner" ng-show="spinning" ng-controller="SpinnerController" us-spinner="opts"></div>
 
-<div class="content content-padded" ng-init="getPage('Privacy')">
+<div class="content content-padded" ng-init="getPage('User Agreement')">
     <br/>
     <h3>{{ title }}</h3>
     <br/>
