Added success page for after a item is submited.

--- a/partials/home.html
+++ b/partials/home.html
@@ -13,7 +13,7 @@
         <br/>
         <div class="row-fluid">
             <div class="span6 center navi">
-                <a ng-click="slidePage('/sell', 'modal')" style="padding:35px 0;">
+                <a ng-click="slidePage('/sell', 'slide')" style="padding:35px 0;">
                     <img ng-src="assets/images/sell.png" /><br/>Sell
                 </a>
             </div>
