--- a/partials/login.html
+++ b/partials/login.html
@@ -22,6 +22,6 @@
 	</form>
 	<br />
     <p class="center" ng-controller="NavigationController">
-        <a ng-click="slidePage('reset_password', 'slide')">Forgot your password?</a>
+        <a ng-click="slidePage('/reset_password', 'slide')">Forgot your password?</a>
     </p>
 </div>
