Added steps to signup flow. 1. Account. 2. Address. 3. Sell your first item. Other minor cleanup as well

--- a/partials/more.html
+++ b/partials/more.html
@@ -21,6 +21,12 @@
             <span class="chevron"></span>
         </li>
         <li>
+            <a ng-click="slidePage('/', 'slide')">
+                How it works
+            </a>
+            <span class="chevron"></span>
+        </li>
+        <li>
             <a ng-click="slidePage('/about', 'slide')">
                 About PeddleBuddy
             </a>
